--- a/frontend/src/components/rightSideBar/rightSideBar.css
+++ b/frontend/src/components/rightSideBar/rightSideBar.css
@@ -1,6 +1,7 @@
 .rightSideBar-container {
+  border: 2px solid #e2e2e2;
+  border-radius: 10px;
   width: 300px;
-  border: 1px solid black;
   min-width: 300px;
 }
 
