--- a/frontend/src/components/aboutUser/aboutUser.css
+++ b/frontend/src/components/aboutUser/aboutUser.css
@@ -18,7 +18,7 @@
     border-radius:50%;
 }
 
-.profile-name{
+.profileName{
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
