--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding:2px 12px;
+    background-color: #FFFFFF;
 }
 .nav-logo{
     width:74px;
