--- a/frontend/src/components/post/post.css
+++ b/frontend/src/components/post/post.css
@@ -47,7 +47,7 @@
   cursor: pointer;
   position: absolute;
   bottom:-38px;
-  right:0px;
+  right:20px;
   background-color: rgb(200, 197, 197);
   padding:8px 15px;
   border-radius: 10px;
@@ -110,10 +110,10 @@
 .commentBox {
   display: flex;
   align-items: center;
-  padding: 16px 0;
+  padding: 12px 0;
 }
 
-.commentBox input {
+.commentBox-input {
   flex: 1;
   width: 100%;
   border-radius: 50px;
@@ -121,6 +121,8 @@
   border: none;
   outline: none;
   padding: 18px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 .userPhoto {
@@ -164,7 +166,7 @@
 
 .commentUser-details{
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
   align-items: center;
 }
 
@@ -175,11 +177,11 @@
 .singleComment-container{
   background-color: #F0F2F5;
   border: 1px soild black;
-  margin-bottom: 23px;
+  margin-bottom: 16px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  padding:20px;
+  padding:10px 14px;
   /* word-wrap: break-word; */
 }
 
@@ -194,7 +196,7 @@ align-items: center;
   margin-right: 10px;
   color: rgb(62, 61, 61);
   cursor: pointer;
-  padding: 4px 12px;
+  padding: 2px 12px;
 
 }
 .commentLikeButton:hover{
