--- a/frontend/src/components/signup/signup.css
+++ b/frontend/src/components/signup/signup.css
@@ -48,3 +48,13 @@
       border-radius: 5px;
       text-align: center;
     }
+.success-signin{
+ width: 100%;
+      padding: 15px;
+      margin: 5px 0;
+      font-size: 14px;
+      background-color: #ADFF2F;
+      color: white;
+      border-radius: 5px;
+      text-align: center;
+}
