--- a/frontend/src/components/profile/userprofile/userprofile.css
+++ b/frontend/src/components/profile/userprofile/userprofile.css
@@ -1,9 +1,13 @@
 body{
   background-color: rgb(226, 226, 226);
 }
+
+.outer{
+  display: flex;
+}
 .user-profile-container{
   background-color: white;
-  width: 80%;
+  width: 70%;
   height: 600px;
   margin: 4rem auto;
   border-radius: 3px;
@@ -45,11 +49,16 @@ body{
     border-radius: 4px;
     object-fit: cover;
     position: absolute;
-    left: 15%; 
+    left:5%; 
     top: 200px;
     border: 3px solid white;
 }
 .user-profile-info{
   margin: 5rem 0 0 2rem;
   padding: 40px;
+}
+
+.suggest{
+  width: 25%;
+  margin-top: 60px;
 }
